<resources>
    <string name="app_name">Challenge 3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_screen_2">Go To Screen 2</string>
    <string name="welcome">Selamat Datang di Aplikasi Penghitung Tekanan Hidrostatis</string>
    <string name="screen_1">Screen 1</string>
    <string name="screen_3">Screen 3</string>
    <string name="kosong" />
    <string name="go_to_screen_4">Go To Screen 4</string>
    <string name="screen_4">Screen 4</string>
    <string name="masukan_massa_jenis">Masukan Massa Jenis</string>
    <string name="masukan_gravitasi">Masukan Gravitasi</string>
    <string name="masukan_ketinggian">Masukan Ketinggian</string>
    <string name="back_to_screen_3">Back To Screen 3</string>
    <string name="screen_2">Screen 2</string>
    <string name="masukan_nama">Masukan Nama</string>
    <string name="go_to_screen_3">Go To Screen 3</string>
</resources>