<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentKetiga">

    <TextView
        android:id="@+id/tvScreen3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:text="@string/screen_3"
        android:textColor="@color/black"
        android:textSize="36sp"/>

    <TextView
        android:id="@+id/tvMassa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvGravitasi"
        android:layout_margin="16dp"
        android:text="@string/kosong"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tvGravitasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvTinggi"
        android:layout_margin="16dp"
        android:text="@string/kosong"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tvTinggi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvEP"
        android:layout_margin="16dp"
        android:text="@string/kosong"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tvEP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvName"
        android:layout_margin="16dp"
        android:text="@string/kosong"
        android:textStyle="bold"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnToScreen4"
        android:layout_margin="16dp"
        android:text="@string/kosong"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btnToScreen4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/go_to_screen_4"
        android:padding="14dp"
        android:textSize="16sp"
        android:backgroundTint="@color/biru"
        />

</androidx.constraintlayout.widget.ConstraintLayout>